feature: refactored kafka service and project management